fix(app/Toolbar): align items center

--- a/client/src/app/Toolbar.less
+++ b/client/src/app/Toolbar.less
@@ -5,7 +5,8 @@
 
   display: flex;
   flex-direction: row;
-  flex-align: left;
+
+  align-items: center;
 
   > * {
     margin: 2px 4px;
